Remove GeneratedProperty
Rename BuilderGeneratedProperty to BuilderProperty and encapsulate
fieldName().

We also move static methods around, trimming down
{JavaFile,Base}Template to keep things close to where they are used.

JIRA: YANGTOOLS-1578
Change-Id: I594ab1548b4ce4cff47f2510bf1967448099c960
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>